tests/expected_package_private_field_construct.diag.out
<input2>:3:5: error: cannot construct here: field 'value' is private
        pkg_private_field_source::Token { value: 7 }
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
